--- a/judge/templates/base.html
+++ b/judge/templates/base.html
@@ -7,11 +7,18 @@
     {% block title %}CodeVerse{% endblock %}
   </title>
 
+  <!-- ✅ Favicon -->
+  <link rel="icon" type="image/png" href="{% static 'images/codeverse-logo.png' %}">
+
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.1.0/github-markdown-light.min.css">
 
 
   <style>
